<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<properties>
		<revision>1.2.0-SNAPSHOT</revision>
		<!-- see org.springframework.boot:spring-boot-dependencies for additional managed dependency versions -->
		<mockito.version>1.10.19</mockito.version>
		<jdefault.version>2.0.0</jdefault.version>
		<commons-csv.version>1.8</commons-csv.version>
		<springdoc-openapi-ui.version>1.5.0</springdoc-openapi-ui.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<aggregate.report.dir>target/site/jacoco-aggregate/jacoco.xml</aggregate.report.dir>		
	</properties>

	<groupId>com.ibm.whc.deid</groupId>
	<artifactId>de-identification</artifactId>
	<packaging>pom</packaging>
	<version>${revision}</version>
	<name>DeID</name>

	<!-- sub modules -->
	<modules>
		<module>whc-shared</module>
		<module>ipv-utils</module>
		<module>ipv-jsonpath</module>
		<module>ipv-core</module>
		<module>de-identification-app</module>
	</modules>

	<dependencyManagement>
		<dependencies>
                        <dependency>
                               <groupId>org.apache.logging.log4j</groupId>
                               <artifactId>log4j-bom</artifactId>
                               <version>2.17.1</version>
                               <scope>import</scope>
                               <type>pom</type>
                        </dependency>
			<dependency>
				<!-- Import dependency management from Spring Boot -->
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>2.4.3</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<!-- common -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
		</dependency>
		<!-- Allow all child modules to make use of the slf4j interface.            -->
		<!-- The actual slf4j implementation is pulled in by de-identification-app  -->
		<!-- which has dependencies on the spring starter bundles.                  -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<scope>provided</scope>
		</dependency>

		<!-- common test -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<!-- managed from spring-boot-dependencies -->
            <scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.12.4</version>
				<configuration>
					<parallel>all</parallel>
					<threadCount>12</threadCount>
					<forkCount>2.0C</forkCount>
					<threadCountSuites>8</threadCountSuites>
					<threadCountClasses>8</threadCountClasses>
					<threadCountMethods>8</threadCountMethods>
					<parallelTestTimeoutInSeconds>40</parallelTestTimeoutInSeconds>
					<parallelTestTimeoutForcedInSeconds>40</parallelTestTimeoutForcedInSeconds>
					<perCoreThreadCount>true</perCoreThreadCount>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<source>LATEST</source>
					<target>LATEST</target>
					<doclint>none</doclint>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
			</plugin>
		</plugins>
		
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.sonarsource.scanner.maven</groupId>
					<artifactId>sonar-maven-plugin</artifactId>
					<version>3.7.0.1746</version>
				</plugin>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>0.8.6</version>
				</plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <release>11</release>
                        <showWarnings>true</showWarnings>
                        <compilerArgs>
                            <arg>-Xlint:all</arg>
                            <arg>-Xlint:-processing</arg>
                            <arg>-Xlint:-rawtypes</arg>
                            <arg>-Werror</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>				
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>flatten-maven-plugin</artifactId>
					<version>1.1.0</version>
					<configuration>
						<updatePomFile>true</updatePomFile>
						<flattenMode>resolveCiFriendliesOnly</flattenMode>
					</configuration>
					<executions>
						<execution>
							<id>flatten</id>
							<phase>process-resources</phase>
							<goals>
								<goal>flatten</goal>
							</goals>
						</execution>
						<execution>
							<id>flatten.clean</id>
							<phase>clean</phase>
							<goals>
								<goal>clean</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
			</plugins>				
		</pluginManagement>
	</build>

	<profiles>
		<profile>
			<id>coverage</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<executions>
							<execution>
								<id>prepare-agent</id>
								<goals>
									<goal>prepare-agent</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>

